force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/ssot__KnowledgeArticleVersion__dlm.object-meta.xml
<CustomObject>
    <label>Knowledge Article Version</label>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Knowledge Article Version</labelOverride>
        <masterLabel>Knowledge Article Version</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityGroup>Knowledge Article</referenceEntityGroup>
        <referenceEntityName>KnowledgeArticleVersion</referenceEntityName>
        <referenceEntitySubjectArea>Knowledge Article</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>