force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/PMC_SS_NumberOfDisplayDays_c__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NumberOfDisplayDays_c__c</fullName>
    <label>Number Of Display Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Number Of Display Days</labelOverride>
        <masterLabel>Number Of Display Days</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>