force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/PMC_SS_Region_c__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Region_c__c</fullName>
    <label>Region</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Region</labelOverride>
        <masterLabel>Region</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>