force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Procedure_Purpose_c__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Purpose_c__c</fullName>
    <label>Purpose</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Purpose</labelOverride>
        <masterLabel>Purpose</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>