force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/Procedure_Steps_c__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Steps_c__c</fullName>
    <label>Steps</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Steps</labelOverride>
        <masterLabel>Steps</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>